SOMBRAS, GRADIENTES DE COLORES

--- a/CSS/PRÁCTICA/FONDOS/styles.css
+++ b/CSS/PRÁCTICA/FONDOS/styles.css
@@ -1,15 +1,25 @@
 body{   
     background-color: #00ff00;
+    margin: 0;
+    font-family: sans-serif;
 }
 
 
 .box{
-    width: 400px;
-    height: 200px;
-    margin: 20px;
-    background-color: #00000000;
-    background-image: url("https://wallpapercave.com/wp/wc1787509.jpg");
-    background-size: 200px;
-    background-position: center;
-    background-repeat: no-repeat;
+    width: 100%;
+    height: 100px;
+    margin: 0;
+    background: url("https://wallpapercave.com/wp/wc1787509.jpg") top / cover fixed #00000000;
+}
+
+.opaco{
+    height:100%;
+    width: 100%;
+    background-color: #000a;
+}
+
+h2{
+    text-align: center;
+    padding: 40px;
+    color: #fff;
 }
