--- a/HTML/PRACTICA/FIELDSET Y LEGEND/FIELDSET/styles.css
+++ b/HTML/PRACTICA/FIELDSET Y LEGEND/FIELDSET/styles.css
@@ -80,3 +80,9 @@ legend{
     padding: 0 6px;
     color: #666;
 }
+
+a{
+    /*Ideal para los fondos oscuros.*/
+    color: #69f;
+    text-decoration: none;
+}
