--- a/CSS/PRÁCTICA/INTERMEDIO/POSICIONES FIJA Y STICKY/styles.css
+++ b/CSS/PRÁCTICA/INTERMEDIO/POSICIONES FIJA Y STICKY/styles.css
@@ -5,7 +5,7 @@ body{
 
 .overlay{
     background: linear-gradient(to top, #fff, transparent);
-    position: absolute;
+    position: fixed;
     z-index: 20;
     width: 100%;
     bottom: 0;
