Cambios en nuestra primera web

--- a/WEBS/PRIMERA WEB/styles.css
+++ b/WEBS/PRIMERA WEB/styles.css
@@ -128,11 +128,17 @@ body, div,ul,nav,header,footer, a, li,label{
 
 /* ------- PROFILE SECTION ------- */
 
+.profile{
+    container-type:inline-size;
+    container-name: profile;
+}
+
 .profile__wrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: #fff;
+    max-width: 1400px;
 }
 
 .profile__data-container{
@@ -150,14 +156,9 @@ body, div,ul,nav,header,footer, a, li,label{
     /*Para que nuestra imagen sea responsive*/
     max-width: 100%;
     width: 720px;
-    border-radius: 16px;
 }
 
 h1{
-    color: #4b8467;
-}
-
-.profile__skills-container h2{
     color: #4b8467;
 }
 
@@ -165,20 +166,125 @@ h1{
     list-style: none;
     display: flex;
     margin: 10px;
+    max-width: 600px;
+    margin-left: 0;
+    /*Para que se alinen los nombres al centro*/
+    align-items: center;
+}
+
+/*SERGIO*/
+
+.skills-container--sergio h2{
+    color: #4b8467;
 }
 
 .load-bar{
-    border: 2px solid #4b8467;
     border-radius: 8px;
     color: #fff;
     padding: 2px;
     font-size: 12px;
     width: 80%;
     margin: 4px;
-    background-color: #fff;
+    margin-left: 0;
 }
 
+.load-bar--sergio{
+    border: 2px solid #4b8467;
+}
+
+.load-bar__bar{
+    border-radius: 6px;
+    padding: 4px 6px;
+}
+
+.bar--sergio{
+    background-color: #4b8467;
+}
+
+.skill-name--sergio{
+    color: #4b8467;
+}
+
+/*ADA*/
+
+.skills-container--ada h2{
+    color: #48e;
+}
+
+.load-bar--ada{
+    border: 2px solid #48e;
+}
+
+.bar--ada{
+    background-color: #48e;
+}
+
+.skill-name--ada{
+    color: #48e;
+}
+
+/*GENERAL*/
+
+.bar--10{
+    width: 10%;
+}
+
+.bar--60{
+    width: 60%;
+}
+
+.bar--80{
+    width: 80%;
+}
+
+.bar--90{
+    width: 90%;
+}
+
+.bar--100{
+    width: 100%;
+}
 
 /* ------- PROFILE QUERIES ------- */
+
+@container profile  (min-width:800px){  
+    .profile__wrapper{
+        flex-direction: row;
+        padding: 20px;
+        background-color: transparent;
+        height: 90vh;
+        margin: auto;
+    }
+
+    .profile__data-container{
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        /*Borde arriba izquierda, arriba derecha, abajo derecha, abajo izquierda*/
+        border-radius: 0 25px 25px 0;
+    }
+
+    h1{
+        margin: 0;
+        font-size: 3rem;
+    }
+
+    .profile__data{
+        max-width: 620px;
+    }
+
+    .profile__img-container{
+        max-height: initial;
+         /*Borde arriba izquierda, arriba derecha, abajo derecha, abajo izquierda*/
+        border-radius: 25px 0 0 25px;
+    }
+
+    .profile__img{
+        height: 100%;
+        /*Para que quede bien la foto*/
+        object-fit: cover;
+        width: 500px;
+    }
+}
 
 /* ------- PROFILE END ------- */
