--- a/WEBS/PRIMERA WEB/styles.css
+++ b/WEBS/PRIMERA WEB/styles.css
@@ -3,6 +3,8 @@
 *{
     /**/
     box-sizing: border-box;
+    /*Para que al scrollear sea más lento*/
+    scroll-behavior:smooth ;
 }
 
 body{
@@ -26,6 +28,10 @@ body, div,ul,nav,header,footer, a, li,label{
     align-items: center;
     container-type: inline-size;
     container-name: header;
+    position: relative;
+    z-index: 10;
+    text-align: center;
+    font-size: 20px;
 }
 
 .header__open-nav-button{
@@ -137,7 +143,6 @@ body, div,ul,nav,header,footer, a, li,label{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #fff;
     max-width: 1400px;
 }
 
@@ -156,6 +161,7 @@ body, div,ul,nav,header,footer, a, li,label{
     /*Para que nuestra imagen sea responsive*/
     max-width: 100%;
     width: 720px;
+    border-radius: 20px;
 }
 
 h1{
@@ -262,6 +268,7 @@ h1{
         align-items: center;
         /*Borde arriba izquierda, arriba derecha, abajo derecha, abajo izquierda*/
         border-radius: 0 25px 25px 0;
+        box-shadow: 0px 0px 8px #000;
     }
 
     h1{
@@ -275,8 +282,9 @@ h1{
 
     .profile__img-container{
         max-height: initial;
-         /*Borde arriba izquierda, arriba derecha, abajo derecha, abajo izquierda*/
+        /*Borde arriba izquierda, arriba derecha, abajo derecha, abajo izquierda*/
         border-radius: 25px 0 0 25px;
+        box-shadow: 0px 0px 8px #000;
     }
 
     .profile__img{
@@ -284,7 +292,219 @@ h1{
         /*Para que quede bien la foto*/
         object-fit: cover;
         width: 500px;
+        border-radius: 0;
     }
 }
 
 /* ------- PROFILE END ------- */
+
+/* ------- PORTFOLIO SECTION------- */
+
+.portfolio{
+    background-color: #4b6467;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    container-type: inline-size;
+    container-name: portfolio;
+    justify-content: space-evenly;
+}
+
+.portfolio__title{
+    font-size: 2.4rem;
+    margin-bottom: 8px;
+}
+
+.portfolio__project-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 1300px;
+    margin: auto;
+    width: 100%;
+    gap: 12px;
+    padding: 12px;
+    min-height: 90vh;
+}
+
+.portfolio__project{
+    /*Background image sirve para imagenes o gradientes*/
+    background-image: linear-gradient(#0005, #0009), url("LOGO2.png");
+    background-position: center;
+    background-size: cover;
+    /*PARA CENTRAR ELEMENTOS CON GRID SE HACE DE LA SIGUIENTE MANERA*/
+    display: grid;
+    place-content: center;
+    border-radius: 10px;
+    margin: 5px;
+}
+
+.portfolio__project:last-child{
+    margin-bottom: 30px;
+}
+
+.portfolio__project:hover{
+    opacity: 0.74;
+    /*Para que tenga un contorno*/
+    outline: 2px solid #fff6;
+}
+
+/* ------- PORTFOLIO QUERIES------- */
+
+/*50 rem==800px/16. Se están empezando a utilizar más los rems.*/
+@container portfolio (min-width:50rem){
+    .portfolio__project-container{
+        grid-template-columns: repeat(auto-fill, minmax(400px,1fr));
+    }
+
+    .portfolio__project:first-child{
+        grid-column: span 2;
+    }
+
+    .portfolio__project:last-child{
+        grid-column: span 2;
+    }
+}
+
+@container portfolio (min-width:70rem){
+    .portfolio__project-container{
+        grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+    }
+
+    /*Vamos a darle protagonismo al primer proyecto*/
+    .portfolio__project:first-child{
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+
+    .portfolio__project:last-child{
+        grid-column: span 4;
+    }
+}
+
+/* ------- PORTFOLIO END------- */
+
+/* ------- FORMULARIO SECTION-------*/
+
+.form{
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 20px;
+    container-type: inline-size;
+    container-name: form;
+}
+
+.form__form{
+    /*Para que crezca a lo largo.*/
+    flex: 1;
+    padding: 12px;
+    max-width: 600px;
+    /*Para que se haga más grande.*/
+    width: 100%;
+    display: grid;
+    gap: 12px;
+    background-color: #4b646755;
+    border-radius: 16px;
+    padding: 30px;
+    box-shadow: 1px 2px 3px #000;
+    margin-bottom: 20px;
+}
+
+.form_title{
+    font-size: 2.4rem;
+}
+
+.form__input-container :is(input,textarea){
+    width: 100%;
+    padding: 12px 8px;
+    font-size: 14px;
+    margin: 4px;
+    border: none;
+    box-shadow: 2px 2px 9px #0002;
+    border-radius: 8px;
+    outline: none;
+}
+
+/*DE ESTA MANERA, CUANDO EL USUARIO ESTE ESCRIBIENDO EN EL INPUT O EN EL TEXT-AREA, SE PONDRA LAS PROPIEDADES QUE DIGAMOS*/
+.form__input-container :is(input,textarea):focus{
+    outline: 3px solid #4b6467;
+    outline-offset: 3px;
+}
+
+/*IMPORTANTES ESTE CÓDIGO SI PONEMOS UN TEXT-AREA*/
+.form__input-container textarea{
+    resize: none;
+    min-height: 120px;
+    /*Para que herede la tipografía Montserrat.*/
+    font-family: inherit;
+    font-size: 16px;
+}
+
+.form__input-container input[type="submit"]{
+    padding: 12px;
+    background-color: #4b6467;
+    color: #fff;
+}
+
+.form__input-container label{
+    margin: 5px;
+    color: #4b6461;
+}
+
+/* ------- FORMULARIO QUERIES-------*/
+
+@container form (min-width:50rem){
+    .form__form{
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "nombre apellido"
+        "email email"
+        "message message"
+        "submit submit"
+        ;
+    }
+
+    .form__input-container:first-child{
+        grid-area: nombre;
+    }
+
+    .form__input-container:nth-child(2){
+        grid-area: apellido;
+    }
+
+    .form__input-container:nth-child(3){
+        grid-area: email;
+    }
+
+    .form__input-container:nth-child(4){
+        grid-area: message;
+    }      
+
+    .form__input-container:last-child{
+        grid-area: submit;
+    }
+}
+
+/* ------- FORMULARIO END-------*/
+
+/*------- FOOTER SECTION ------- */
+
+.footer{
+    padding: 60px;
+    text-align: center;
+    background-color: #4b6467;
+    height: 30vh;
+    color: #fff;
+}
+
+strong{
+    font-size: 20px;
+}
+
+
+/*------- FOOTER QUERIES ------- */
+
+/*------- FOOTER END ------- */
